--- a/.github/workflows/master_cippc3fxk.yml
+++ b/.github/workflows/master_cippc3fxk.yml
@@ -6,7 +6,7 @@ name: Build and deploy Powershell project to Azure Function App - cippc3fxk
 on:
   push:
     branches:
-      - master
+      - interface-rewrite
   workflow_dispatch:
 
 env:
